[gd_scene format=3 uid="uid://1tl7sn1mrcr7"]

[ext_resource type="Script" uid="uid://bccqd23w3qn2w" path="res://Scripts/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://s6k5ya5ygna5" path="res://Sprites/Wizard/Wizard Walk Backward.png" id="2_x3wgy"]
[ext_resource type="Texture2D" uid="uid://8jktiyl5gnnd" path="res://Sprites/Wizard/Wizard Walk Forward.png" id="3_3smsa"]
[ext_resource type="PackedScene" uid="uid://bn6bgp7htt2l5" path="res://Scenes/cauldron_ui.tscn" id="3_6t5aa"]
[ext_resource type="Texture2D" uid="uid://bnks7eo63o30f" path="res://Sprites/Wizard/Wizard Walk Left.png" id="4_8erm5"]
[ext_resource type="Texture2D" uid="uid://b0dvf45oi1p84" path="res://Sprites/Wizard/Wizard Walk Right.png" id="5_f1ek2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("2_x3wgy")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("3_3smsa")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("4_8erm5")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("5_f1ek2")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("2_x3wgy")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("2_x3wgy")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("2_x3wgy")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("2_x3wgy")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("4_8erm5")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("4_8erm5")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("4_8erm5")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("4_8erm5")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("5_f1ek2")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("5_f1ek2")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("5_f1ek2")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("5_f1ek2")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("3_3smsa")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("3_3smsa")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uwr"]
atlas = ExtResource("3_3smsa")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xs0"]
atlas = ExtResource("3_3smsa")
region = Rect2(48, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_hwi80"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xs0")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]

[node name="Player" type="CharacterBody2D" unique_id=1289873781]
script = ExtResource("1_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=954142346]
position = Vector2(-8, -12)
sprite_frames = SubResource("SpriteFrames_hwi80")
centered = false

[node name="Camera2D" type="Camera2D" parent="AnimatedSprite2D" unique_id=1916039330]
position = Vector2(8, 8)

[node name="UIHandler" type="Control" parent="AnimatedSprite2D/Camera2D" unique_id=1893099968]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="AnimatedSprite2D/Camera2D/UIHandler" unique_id=1116446230]
layout_mode = 0
offset_left = -52.0
offset_top = 75.0
offset_right = 52.0
offset_bottom = 83.0

[node name="ColorRect2" type="ColorRect" parent="AnimatedSprite2D/Camera2D/UIHandler/ColorRect" unique_id=1976513683]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 102.0
offset_bottom = 7.0
color = Color(0, 1, 0.38039216, 1)

[node name="StamTimer" type="Timer" parent="AnimatedSprite2D/Camera2D/UIHandler" unique_id=279510379]

[node name="CauldronUI" parent="AnimatedSprite2D/Camera2D/UIHandler" unique_id=739318511 instance=ExtResource("3_6t5aa")]
visible = false
z_index = 200
layout_mode = 1
offset_left = -40.0
offset_top = -40.0
offset_right = -40.0
offset_bottom = -40.0

[node name="CanvasLayer" parent="AnimatedSprite2D/Camera2D/UIHandler/CauldronUI" index="2" unique_id=601199690]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1967057914]
shape = SubResource("CircleShape2D_onrkg")

[connection signal="timeout" from="AnimatedSprite2D/Camera2D/UIHandler/StamTimer" to="." method="_on_stam_timer_timeout"]

[editable path="AnimatedSprite2D/Camera2D/UIHandler/CauldronUI"]
